@@ -99,7 +99,7 @@
  *   epc_publisher_add (publisher, "maman", "bar", -1);
  *   epc_publisher_add_file (publisher, "source-code", __FILE__);
  *
- *   epc_publisher_run ();
+ *   epc_publisher_run (NULL);
  *  </programlisting>
  * </example>
  *
@@ -1360,22 +1360,22 @@ epc_publisher_get_protocol (EpcPublisher *self)
  * @error: return location for a #GError, or %NULL
  *
  * Starts the server component of the #EpcPublisher and blocks until it is
- * shutdown using #epc_publisher_quit. If the server was not started, the
+ * shutdown using #epc_publisher_quit. If the server could not be started, the
  * function returns %FALSE and sets @error. The error domain is
  * #EPC_AVAHI_ERROR. Possible error codes are those of the
  * <citetitle>Avahi</citetitle> library.
  *
- * When starting the publisher in HTTPS mode for the first time, self-signed
- * keys have to be generated. Generating secure keys needs quite some time,
- * therefore it is recommended to call #epc_progress_window_install, or
+ * When starting the publisher in HTTPS mode for the first time self-signed
+ * keys must be generated. Generating secure keys needs some time,
+ * so it is recommended to call #epc_progress_window_install, or
  * #epc_shell_set_progress_hooks to provide visual feedback during that
- * operation. Key generation takes place in a separate background thread,
- * the calling thread waits in a GMainLoop. Therefore the UI should remain
- * responsive, when generating keys.
+ * operation. Key generation takes place in a separate background thread and
+ * the calling thread waits in a GMainLoop. Therefore the UI can remain
+ * responsive when generating keys.
  *
  * To start the server without blocking call #epc_publisher_run_async.
  *
- * Returns: %TRUE when the publisher was started successfully,
+ * Returns: %TRUE when the publisher was successfully started,
  * %FALSE if an error occurred.
  */
 gboolean
@@ -1406,14 +1406,14 @@ epc_publisher_run (EpcPublisher  *self,
  * @error: return location for a #GError, or %NULL
  *
  * Starts the server component of the #EpcPublisher without blocking. If the
- * server was not started, the function returns %FALSE and sets @error. The
+ * server could not be started then the function returns %FALSE and sets @error. The
  * error domain is #EPC_AVAHI_ERROR. Possible error codes are those of the
  * <citetitle>Avahi</citetitle> library.
  *
  * To stop the server component call #epc_publisher_quit.
  * See #epc_publisher_run for additional information.
  *
- * Returns: %TRUE when the publisher was started successfully,
+ * Returns: %TRUE when the publisher was successfully started,
  * %FALSE if an error occurred.
  */
 gboolean
